<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/game_rules"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="321dp"
            android:gravity="center"
            android:lineHeight="25sp"
            android:padding="20dp"
            android:text="@string/game_description"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="20dp"
            android:text="Grey"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:scaleX="1.25"
            android:scaleY="0.75"
            android:layout_height="91dp"
            android:translationX="-40dp"
            android:rotation="-70"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:textColor="@color/grey"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/orange"
                android:text="Blue" />

            <Button
                android:id="@+id/button4"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Pink"
                android:background="@color/grey"
                android:textColor="@color/orange"/>
        </LinearLayout>

        <TextView
            android:text="@string/correct_answer"
            android:layout_width="match_parent"
            android:layout_height="321dp"
            android:gravity="center"
            android:lineHeight="25sp"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>
    </ScrollView>
</layout>